infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-eligibility
  labels:
    app: loan-eligibility
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-eligibility
  template:
    metadata:
      labels:
        app: loan-eligibility
    spec:
      containers:
        - name: loan-eligibility
          image: 259510286099.dkr.ecr.ap-southeast-1.amazonaws.com/coreplatform/loan-eligibility-service:latest
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 60
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "1"
