infrastructure/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  namespace: coreplatform
  name: loan-eligibility-svc
spec:
  selector:
    app: loan-eligibility
  ports:
    - protocol: TCP
      port: 8080
  type: ClusterIP
