infrastructure/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: loan-eligibility-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev.coreplatform.buk0.com
      http:
        paths:
          - path: /loan-eligibility/(.*)
            backend:
              serviceName: loan-eligibility-svc
              servicePort: 8080
